Require JDK25
Motivation:

We want to target JDK25 as a minimum

Modifications:

Adjust build to be able to require JDK25 as a minimum.

Result:

Require JDK25 for netty 5